# NVDA-jetson-demo

./: README.md  lab2_divergence.cu  lab3_cublas.cu  lab4_attention.cu  lab5_reshape.cu  lab6_norm.cu  lab7_neuron.cu  lab8_activation.cu
Jetson-CPU-Optimization-Labs/: lab1_vector_add.cpp  lab4_matrix_eff.cpp
New_Work/1/: README.md  vibration_analysis.cpp  vibration_app
New_Work/2/: README.md  similarity_app  similarity_search.cpp
practice1/: README.md
practice1/openblas/: openblas_1000.cpp
practice2/: README.md  cudnn_conv.cu  matrix_mul.cu  vector_add.cu
practice3/: README.md  trt_engine.cpp  trt_profiler.cpp
practice4/: README.md
practice4/CPU_Labs/: README.md  lab2_eigen_1e8.cpp  lab3_openblas_1e8.cpp
practice4/GPU_Labs/: CMakeLists.txt  README.md  lab1_cpu_vs_gpu.cu  lab2_divergence.cu  lab3_cublas.cu  lab4_attention.cu  lab5_reshape.cu  lab6_norm.cu  lab7_neuron.cu  lab8_activation.cu
practice5/ex1_resnet/: README.md  export_resnet.py  resnet50.onnx  run.sh
practice5/ex2_yolo/: README.md  run.sh
practice5/ex3_dla/: README.md  run.sh
